# imagect

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile.in  README.md  TODO  buildvalues.h.in  buildvalues.hpp.in  setup
config/: .editorconfig.in
docs/: imagemagick6-msys2.md  linux-build.md  linux-build.txt  msw-build.md  msw-build.txt  msys2-build.md
include/: buildvalues.h  buildvalues.hpp  canvasitem.h  canvasitem.hpp  canvaspanel.h  composer.h  controller.h  cropevent.h  cropevent.hpp  croprectangle.h  defs.h  defs.hpp  exceptionsdef.h  exportdlg.h  exportdlg.hpp  extendedcanvas.hpp  filevalid.h  filext.h  filext.hpp  frameborder.h  identifiersdef.h  imagectapp.h  imagectapp.hpp  imagewindow.h  imagewindow.hpp  imgcropapp.h  imgtools.h  mainframe.h  mainframe.hpp  optscontainer.h  pixeltool.h  previewframe.h  previewpanel.h  previewpanel.hpp  rectangle.h  rectangleevent.h  recthelper.hpp  rectsash.h  scaler.h  scaler.hpp  (+11 more)
src/: canvasitem.cpp  canvaspanel.cpp  composer.cpp  controller.cpp  cropevent.cpp  croprectangle.cpp  exportdlg.cpp  extendedcanvas.cpp  filevalid.cpp  filext.cpp  frameborder.cpp  imagectapp.cpp  imagewindow.cpp  imgcropapp.cpp  imgtools.cpp  mainframe.cpp  pixeltool.cpp  previewframe.cpp  previewpanel.cpp  rectangle.cpp  rectangleevent.cpp  recthelper.cpp  rectsash.cpp  scaler.cpp  scrolledcanvas.cpp  scrolview.cpp  smartrect.cpp  toolspanel.cpp  zoomctrl.cpp  zoomevent.cpp
templates/: buildvalues.hpp.in
win/: tc-mingw-x86_64.cmake  wimagect.rc
